[project]
name = "launchdarkly-mcp-server"
version = "0.1.0"
description = "MCP server for managing LaunchDarkly feature flags via natural language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LaunchDarkly MCP Contributors"},
]
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]

[project.scripts]
launchdarkly-mcp = "launchdarkly_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/launchdarkly_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
